sbin_PROGRAMS = sqlbox
sqlbox_SOURCES = sqlbox.c sqlbox_mssql.c sqlbox_mysql.c sqlbox_pgsql.c sqlbox_sdb.c sqlbox_sqlite.c sqlbox_sqlite3.c sqlbox_oracle.c sqlbox_sql.c 

EXTRA_DIST = sqlbox_mssql.h sqlbox_mysql.h sqlbox_pgsql.h sqlbox_sdb.h sqlbox_sqlite.h sqlbox_sqlite3.h sqlbox_oracle.h sqlbox_sql.h 
